--- a/.gitignore
+++ b/.gitignore
@@ -25,14 +25,12 @@ Makefile.in
 .deps/
 .dirstamp
 
-# gcc / libtool
+# gcc / libtool / gettext
 /ltmain.sh
 /libtool
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
+/m4
+/ABOUT-NLS
+/config.rpath
 *.o
 *.lo
 *.la
