--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,6 @@ SRCDIRS = _adt _efuns _lpc _socket lib src LPC
 
 SUBDIRS = $(SRCDIRS) po
 
-EXTRA_DIST = config.rpath auto/config.rpath m4/ChangeLog  README INSTALL LICENSE doc
+EXTRA_DIST = README INSTALL LICENSE doc
 
 ACLOCAL_AMFLAGS = -I m4
