--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,7 @@
 AC_INIT([neolith], [0.1.3])
 AC_CONFIG_SRCDIR([gettext.h])
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_AUX_DIR([auto])
 AM_INIT_AUTOMAKE
 AC_USE_SYSTEM_EXTENSIONS
 
