add trace flags

--- a/configure.ac
+++ b/configure.ac
@@ -19,6 +19,7 @@ AH_BOTTOM([#if defined(ENABLE_NLS) && defined(HAVE_GETTEXT)
 #else
 #define _(s) (s)
 #endif
+#include "src/logger.h"
 ])
 
 AC_PROG_CC_C99
