separate disassembler code from efun

--- a/lib/lpc/Makefile.am
+++ b/lib/lpc/Makefile.am
@@ -5,6 +5,6 @@ noinst_LTLIBRARIES = liblpc.la
 
 liblpc_la_SOURCES = buffer.c buffer.h class.c class.h mapping.c mapping.h \
 	array.c array.h object.c object.h program.c program.h uids.c uids.h \
-	function.h
+	function.h disassemble.c disassemble.h
 
 noinst_HEADERS = types.h
