--- a/lib/efuns/Makefile.am
+++ b/lib/efuns/Makefile.am
@@ -17,7 +17,7 @@ noinst_LTLIBRARIES = libefuns.la
 libefuns_la_SOURCES = $(BUILT_SOURCES) \
 	operator.c operator.h math.c unsorted.c file.c debug.c \
 	replace_program.c replace_program.h \
-	call_out.c call_out.h string.c \
+	call_out.c call_out.h string.c datetime.c \
 	reclaim_object.c reclaim_object.h \
 	sprintf.c sprintf.h \
 	dump_prog.c parse.c parse.h \
