Add en-US, zh-Hant-TW l10n files

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,37 +1,39 @@
-# List of source files which contain translatable strings.
-_adt/crc32.c
-_adt/qsort.c
-_adt/avltree.c
-_adt/hash.c
-_efuns/dumpstat.c
-_efuns/replace_program.c
-_efuns/debug.c
-_efuns/call_out.c
-_efuns/file.c
-_efuns/sprintf.c
-_efuns/edit_source.c
-_efuns/unsorted.c
-_efuns/operator.c
-_efuns/make_func.c
-_efuns/string.c
-_efuns/parse.c
-_efuns/dump_prog.c
-_efuns/ed.c
-_efuns/reclaim_object.c
-_efuns/math.c
-_lpc/array.c
-_lpc/mapping.c
-_lpc/object.c
-_lpc/uids.c
-_lpc/class.c
-_lpc/program.c
-_lpc/buffer.c
-_socket/socket_err.c
-_socket/socket_ctrl.c
-_socket/sockets.c
-_socket/socket_efuns.c
 lib/misc.c
 lib/wrapper.c
+lib/lpc/array.c
+lib/lpc/mapping.c
+lib/lpc/object.c
+lib/lpc/uids.c
+lib/lpc/class.c
+lib/lpc/disassemble.c
+lib/lpc/program.c
+lib/lpc/buffer.c
+lib/socket/socket_err.c
+lib/socket/socket_ctrl.c
+lib/socket/sockets.c
+lib/socket/socket_efuns.c
+lib/efuns/dumpstat.c
+lib/efuns/replace_program.c
+lib/efuns/make_func.c
+lib/efuns/debug.c
+lib/efuns/call_out.c
+lib/efuns/file.c
+lib/efuns/sprintf.c
+lib/efuns/edit_source.c
+lib/efuns/unsorted.c
+lib/efuns/operator.c
+lib/efuns/make_func.y
+lib/efuns/string.c
+lib/efuns/parse.c
+lib/efuns/datetime.c
+lib/efuns/dump_prog.c
+lib/efuns/ed.c
+lib/efuns/reclaim_object.c
+lib/efuns/math.c
+lib/adt/crc32.c
+lib/adt/qsort.c
+lib/adt/avltree.c
+lib/adt/hash.c
 src/rc.c
 src/lex.c
 src/file.c
@@ -40,7 +42,7 @@ src/simul_efun.c
 src/malloc.c
 src/icode.c
 src/backend.c
-src/grammar.c
+src/grammar.y
 src/preprocess.c
 src/interpret.c
 src/binaries.c
@@ -48,8 +50,10 @@ src/scratchpad.c
 src/simulate.c
 src/compiler.c
 src/generate.c
+src/logger.c
 src/comm.c
 src/trees.c
 src/regexp.c
+src/grammar.c
 src/stralloc.c
 src/main.c
