Move historical documents to docs/history

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,6 @@ SRCDIRS = lib src LPC
 
 SUBDIRS = $(SRCDIRS) po
 
-EXTRA_DIST = auto/config.rpath README INSTALL LICENSE doc
+EXTRA_DIST = auto/config.rpath README.md LICENSE docs
 
 ACLOCAL_AMFLAGS = -I m4
