--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ if(WIN32)
     add_compile_definitions(WIN32_WINNT=0x0601) # Windows 7 or higher
 endif()
 
+# enable pedantic warnings and treat warnings as errors
 if(MSVC)
     add_compile_options(/W4 /WX /permissive- /Zc:__cplusplus)
 else()
@@ -22,9 +23,12 @@ check_include_file("stdint.h" HAVE_STDINT_H)
 check_include_file("unistd.h" HAVE_UNISTD_H)
 check_include_file("limits.h" HAVE_LIMITS_H)
 
+find_package(BISON REQUIRED)
+
 # generate global header "config.h" for build configurations
 configure_file(config.h.in config.h @ONLY)
 include_directories("${CMAKE_BINARY_DIR}")
 add_compile_definitions(HAVE_CONFIG_H)
 
 add_subdirectory(lib/adt)
+add_subdirectory(lib/efuns)
