fix: cmake build edit_source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,9 @@ endif()
 
 # enable pedantic warnings and treat warnings as errors
 if(MSVC)
-    add_compile_options(/W4 /WX /permissive- /Zc:__cplusplus)
+    # add_compile_options(/W4 /WX /permissive- /Zc:__cplusplus)
 else()
-    add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+    # add_compile_options(-Wall -Wextra -Wpedantic -Werror)
 endif()
 
 # check for standard headers
