fix: linux build

--- a/lib/efuns/CMakeLists.txt
+++ b/lib/efuns/CMakeLists.txt
@@ -1,8 +1,6 @@
 # lib/efuns/CMakeLists.txt
 
-BISON_TARGET(make_func make_func.y ${CMAKE_CURRENT_BINARY_DIR}/make_func.c
-    COMPILE_FLAGS "-Wno-unused-variable -Wno-unused-function"
-)
+BISON_TARGET(make_func make_func.y ${CMAKE_CURRENT_BINARY_DIR}/make_func.c)
 
 set(edit_source_SOURCES edit_source.c)
 add_executable(edit_source ${edit_source_SOURCES} ${BISON_make_func_OUTPUTS})
@@ -14,4 +12,4 @@ target_include_directories(edit_source PRIVATE
 )
 
 target_compile_definitions(edit_source PRIVATE _CRT_SECURE_NO_WARNINGS)
-target_link_libraries(edit_source PRIVATE adt)
+target_link_libraries(edit_source PRIVATE adt misc)
