fix: gcc preprocessing

--- a/lib/efuns/CMakeLists.txt
+++ b/lib/efuns/CMakeLists.txt
@@ -14,12 +14,15 @@ target_include_directories(edit_source PRIVATE
 target_compile_definitions(edit_source PRIVATE _CRT_SECURE_NO_WARNINGS)
 target_link_libraries(edit_source PRIVATE adt misc)
 
+# preprocessor-only command
 if(MSVC)
-    set(CPP_COMMAND ${CMAKE_C_COMPILER} /I ${CMAKE_CURRENT_SOURCE_DIR} /EP)
+    set(CPP_COMMAND ${CMAKE_C_COMPILER} /I ${CMAKE_CURRENT_SOURCE_DIR} /EP) # cl
+else()
+    set(CPP_COMMAND ${CMAKE_C_COMPILER} -I ${CMAKE_CURRENT_SOURCE_DIR} -E)  # gcc
 endif()
 
 # generate efun tables
 add_custom_command(TARGET edit_source POST_BUILD
-    COMMAND ${CPP_COMMAND} ${CMAKE_CURRENT_SOURCE_DIR}/prototype.lpc > ${CMAKE_CURRENT_BINARY_DIR}/prototype.lpc
-    COMMAND $<TARGET_FILE:edit_source> ${CMAKE_CURRENT_SOURCE_DIR}/options.h ${CMAKE_CURRENT_BINARY_DIR}/prototype.lpc
+    COMMAND ${CPP_COMMAND} ${CMAKE_CURRENT_SOURCE_DIR}/prototype.c > ${CMAKE_CURRENT_BINARY_DIR}/prototype.i
+    COMMAND $<TARGET_FILE:edit_source> ${CMAKE_CURRENT_SOURCE_DIR}/options.h ${CMAKE_CURRENT_BINARY_DIR}/prototype.i
 )
