--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# autotools - bootstrap files
+*.m4
+configure
+Makefile.in
+autom4te.cache/**
+
+# autotools - configured files
+build
+
 # vim
 *.swp
 *~
