--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,9 +1,10 @@
-SUBDIRS = adt efuns lpc socket .
+SUBDIRS = port adt efuns lpc socket .
 
 pkglib_LTLIBRARIES = libneolith.la
 
-libneolith_la_SOURCES = misc.c wrapper.c wrapper.h
+libneolith_la_SOURCES = wrapper.h
 libneolith_la_LIBADD = \
+	port/libport.la \
 	adt/libadt.la \
 	efuns/libefuns.la \
 	lpc/liblpc.la \
