--- a/lib/socket/Makefile.am
+++ b/lib/socket/Makefile.am
@@ -1,5 +1,5 @@
 AM_CFLAGS = -Wall -pipe -ggdb -O2
-AM_CPPFLAGS = -I@top_srcdir@/lib
+AM_CPPFLAGS = -I@top_srcdir@ -I@top_srcdir@/lib -I@top_builddir@/lib/efuns
 
 noinst_LTLIBRARIES = libsocket.la
 
