build: cmake build libefuns

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,3 +42,4 @@ add_compile_definitions(HAVE_CONFIG_H)
 add_subdirectory(lib/port)
 add_subdirectory(lib/adt)
 add_subdirectory(lib/efuns)
+add_subdirectory(lib/lpc)
