--- a/lib/adt/CMakeLists.txt
+++ b/lib/adt/CMakeLists.txt
@@ -12,3 +12,5 @@ target_include_directories(adt PRIVATE
     ${CMAKE_SOURCE_DIR}/lib
 )
 target_link_libraries(adt PRIVATE port)
+
+target_include_directories(adt INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
