build: [msvc] disable /WX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,8 @@ if(MSVC)
 		message(STATUS "Using dynamic-linking MSVC Runtime Library. (-MD)")
 		set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
 	endif()
-    add_compile_options(/W3 /WX /permissive- /Zc:__cplusplus)
+    # add_compile_options(/W3 /WX /permissive- /Zc:__cplusplus)
+    add_compile_options(/W3 /permissive- /Zc:__cplusplus)
 else()
     # add_compile_options(-Wall -Wextra -Wpedantic -Werror)
 endif()
