--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,4 @@ add_subdirectory(lib/port)
 add_subdirectory(lib/adt)
 add_subdirectory(lib/efuns)
 add_subdirectory(lib/lpc)
+add_subdirectory(lib/socket)
