--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,11 @@ if(MSVC)
 		message(STATUS "Using dynamic-linking MSVC Runtime Library. (-MD)")
 		set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
 	endif()
-    add_compile_options(/W3 /WX /permissive- /Zc:__cplusplus)
+    # add_compile_options(/W3 /WX /permissive- /Zc:__cplusplus)
+    add_compile_options(/W4 /permissive- /Zc:__cplusplus)
 else()
     # add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+    add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 # check for standard headers
@@ -42,3 +44,5 @@ add_compile_definitions(HAVE_CONFIG_H)
 add_subdirectory(lib/port)
 add_subdirectory(lib/adt)
 add_subdirectory(lib/efuns)
+add_subdirectory(lib/lpc)
+add_subdirectory(lib/socket)
