fix: autotool build bison integration

--- a/configure.ac
+++ b/configure.ac
@@ -23,6 +23,7 @@ AH_BOTTOM([#if defined(ENABLE_NLS) && defined(HAVE_GETTEXT)
 
 AC_PROG_CC_C99
 AC_PROG_YACC
+AX_PROG_BISON
 AM_PROG_LIBTOOL
 
 AM_GNU_GETTEXT([external])
