--- a/lib/lpc/Makefile.am
+++ b/lib/lpc/Makefile.am
@@ -4,6 +4,6 @@ AM_CPPFLAGS = -I@top_srcdir@ -I@top_srcdir@/lib -I@top_srcdir@/lib/adt -I@top_bu
 noinst_LTLIBRARIES = liblpc.la
 
 liblpc_la_SOURCES = buffer.c buffer.h class.c class.h mapping.c mapping.h \
-	array.c array.h object.c object.h function.h disassemble.c disassemble.h
+	array.c array.h object.c object.h otable.c otable.h function.h disassemble.c disassemble.h
 
 noinst_HEADERS = types.h
