--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,12 +11,12 @@ bin_PROGRAMS = neolith
 
 neolith_SOURCES = grammar.y lex.c main.c rc.c comm.c backend.c \
 	interpret.c logger.c program.c compiler.c icode.c trees.c \
-	generate.c scratchpad.c binaries.c file.c malloc.c \
+	generate.c scratchpad.c binaries.c malloc.c \
 	simulate.c stralloc.c regexp.c simul_efun.c uids.c
 
 neolith_LDADD = ../lib/efuns/libefuns.la ../lib/lpc/liblpc.la ../lib/socket/libsocket.la ../lib/adt/libadt.la ../lib/port/libport.la -lm -lcrypt
 
 noinst_HEADERS = applies.h backend.h binaries.h comm.h compiler.h \
-	file.h generate.h icode.h interpret.h lex.h logger.h \
+	generate.h icode.h interpret.h lex.h logger.h \
 	macros.h main.h malloc.h otable.h preprocess.h program.h rc.h regexp.h \
 	scratchpad.h simul_efun.h simulate.h std.h stralloc.h trees.h uids.h
