clean: add stem.h for lpmud driver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ add_compile_definitions(HAVE_CONFIG_H)
 
 # add project components
 add_subdirectory(lib/port)
+add_subdirectory(lib/logger)
 add_subdirectory(lib/adt)
 add_subdirectory(lib/efuns)
 add_subdirectory(lib/lpc)
