--- a/lib/adt/CMakeLists.txt
+++ b/lib/adt/CMakeLists.txt
@@ -11,6 +11,6 @@ target_include_directories(adt PRIVATE
     ${CMAKE_SOURCE_DIR}
     ${CMAKE_SOURCE_DIR}/lib
 )
-target_link_libraries(adt PRIVATE port)
+target_link_libraries(adt PRIVATE port logger)
 
 target_include_directories(adt INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
