--- a/lib/port/CMakeLists.txt
+++ b/lib/port/CMakeLists.txt
@@ -5,3 +5,8 @@ add_library(port STATIC
     xcalloc.c
     xstrdup.c
 )
+target_sources(port INTERFACE
+    FILE_SET HEADERS
+    BASE_DIRS ..
+    FILES debug.h wrapper.h byte_code.h
+)
