clean: move program.c to liblpc

--- a/lib/lpc/CMakeLists.txt
+++ b/lib/lpc/CMakeLists.txt
@@ -8,12 +8,13 @@ set(lpc_SOURCES
     mapping.c
     object.c
     otable.c
+    program.c
 )
 add_library(lpc STATIC ${lpc_SOURCES})
 target_sources(lpc INTERFACE
     FILE_SET HEADERS
     BASE_DIRS ..
-    FILES array.h buffer.h class.h functional.h mapping.h object.h types.h
+    FILES array.h buffer.h class.h functional.h mapping.h object.h program.h types.h
 )
 target_include_directories(lpc PRIVATE
     ${CMAKE_SOURCE_DIR}
