--- a/config.h.in
+++ b/config.h.in
@@ -12,6 +12,8 @@
 #cmakedefine HAVE_SYS_WAIT_H
 #cmakedefine HAVE_UNISTD_H
 
+#cmakedefine HAVE_LIBRT
+
 #define PACKAGE "@CMAKE_PROJECT_NAME@"
 #define VERSION "@CMAKE_PROJECT_VERSION@"
 
