fix: telnet related warnings

--- a/lib/port/CMakeLists.txt
+++ b/lib/port/CMakeLists.txt
@@ -8,5 +8,5 @@ add_library(port STATIC
 target_sources(port INTERFACE
     FILE_SET HEADERS
     BASE_DIRS ..
-    FILES debug.h wrapper.h byte_code.h
+    FILES ansi.h debug.h wrapper.h byte_code.h
 )
