--- a/config.h.in
+++ b/config.h.in
@@ -11,6 +11,7 @@
 #cmakedefine HAVE_SYS_TYPES_H
 #cmakedefine HAVE_SYS_WAIT_H
 #cmakedefine HAVE_UNISTD_H
+#cmakedefine HAVE_ARPA_TELNET_H
 
 #cmakedefine HAVE_LIBRT
 
