--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ add_compile_definitions(HAVE_CONFIG_H)
 # add project components
 add_subdirectory(lib/port)
 add_subdirectory(lib/logger)
+add_subdirectory(lib/rc)
 add_subdirectory(lib/misc)
 add_subdirectory(lib/efuns)
 add_subdirectory(lib/lpc)
