test: add stem object library for unit-testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,5 +67,6 @@ if(BUILD_TESTING)
 	find_package(GTest)
 	if (GTest_FOUND)
 		add_subdirectory(tests/test_logger)
+		add_subdirectory(tests/test_lpc_compiler)
 	endif()
 endif()
