--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 # src/CMakeLists.txt
 
-set(neolith_SOURCES
+set(stem_SOURCES
+    stem.c
     backend.c
     comm.c
     interpret.c
-    main.c
     malloc.c
     regexp.c
     simul_efun.c
@@ -12,10 +12,9 @@ set(neolith_SOURCES
     stralloc.c
     uids.c
 )
-
-add_executable(neolith ${neolith_SOURCES})
-target_link_libraries(neolith PRIVATE port logger misc efuns lpc rc socket -lm -lcrypt)
-target_include_directories(neolith PRIVATE
+add_library(stem OBJECT ${stem_SOURCES})
+target_link_libraries(stem PUBLIC port logger misc lpc efuns rc socket -lm -lcrypt)
+target_include_directories(stem PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_SOURCE_DIR}
 )
@@ -24,7 +23,11 @@ target_include_directories(neolith PRIVATE
 include(CheckLibraryExists)
 check_library_exists(rt clock_gettime "" HAVE_LIBRT)
 if(HAVE_LIBRT)
-    target_link_libraries(neolith PRIVATE -lrt)
+    target_link_libraries(stem PUBLIC -lrt)
 else()
     message(WARNING "LIBRT not found, heart_beat() will be disabled.")
 endif()
+
+# build neolith executable
+add_executable(neolith main.c ${neolith_SOURCES})
+target_link_libraries(neolith PRIVATE stem)
