test: add unit-tests for stralloc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,5 +68,6 @@ if(BUILD_TESTING)
 	if (GTest_FOUND)
 		add_subdirectory(tests/test_logger)
 		add_subdirectory(tests/test_lpc_compiler)
+		add_subdirectory(tests/test_stralloc)
 	endif()
 endif()
