--- a/lib/port/CMakeLists.txt
+++ b/lib/port/CMakeLists.txt
@@ -1,10 +1,12 @@
 # lib/port/CMakeLists.txt
 
-add_library(port STATIC
-    stpcpy.c
+set(port_SOURCES
+    $<$<NOT:$<AND:${HAVE_STPCPY},${HAVE_STPNCPY}>>:stpcpy.c>
     xcalloc.c
     xstrdup.c
 )
+
+add_library(port STATIC ${port_SOURCES})
 target_sources(port INTERFACE
     FILE_SET HEADERS
     BASE_DIRS ..
