--- a/tests/test_lpc_compiler/CMakeLists.txt
+++ b/tests/test_lpc_compiler/CMakeLists.txt
@@ -2,6 +2,8 @@
 
 add_executable(test_lpc_compiler
     test_lpc_compiler.cpp
+    test_save_binary.cpp
+    fixtures.hpp
 )
 target_link_libraries(test_lpc_compiler PRIVATE stem GTest::gtest_main)
 
