test: add LPC lexer unit-tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ if(BUILD_TESTING)
 	if (GTest_FOUND)
 		add_subdirectory(tests/test_logger)
 		add_subdirectory(tests/test_lpc_compiler)
+		add_subdirectory(tests/test_lpc_lexer)
 		add_subdirectory(tests/test_simul_efuns)
 		add_subdirectory(tests/test_stralloc)
 	endif()
