test: add unit-test for efuns

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ if(BUILD_TESTING)
 	enable_testing()
 	find_package(GTest)
 	if (GTest_FOUND)
+		add_subdirectory(tests/test_efuns)
 		add_subdirectory(tests/test_logger)
 		add_subdirectory(tests/test_lpc_compiler)
 		add_subdirectory(tests/test_lpc_lexer)
