--- a/lib/socket/CMakeLists.txt
+++ b/lib/socket/CMakeLists.txt
@@ -4,9 +4,9 @@ set(socket_SOURCES
     socket_ctrl.c
     socket_efuns.c
     socket_err.c
-    sockets.c
 )
 add_library(socket STATIC ${socket_SOURCES})
+target_include_directories(socket INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(socket PRIVATE
     ${CMAKE_SOURCE_DIR}
 )
