--- a/tests/test_efuns/CMakeLists.txt
+++ b/tests/test_efuns/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 add_executable(test_efuns
     test_efuns.cpp
+    test_sscanf.cpp
 )
 target_link_libraries(test_efuns PRIVATE stem GTest::gtest_main)
 
