--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ if(BUILD_TESTING)
 	enable_testing()
 	find_package(GTest)
 	if (GTest_FOUND)
+		add_subdirectory(tests/test_backend)
 		add_subdirectory(tests/test_efuns)
 		add_subdirectory(tests/test_logger)
 		add_subdirectory(tests/test_lpc_compiler)
