test: add unit-tests for stack machine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ if(BUILD_TESTING)
 		add_subdirectory(tests/test_lpc_compiler)
 		add_subdirectory(tests/test_lpc_lexer)
 		add_subdirectory(tests/test_simul_efuns)
+		add_subdirectory(tests/test_stack_machine)
 		add_subdirectory(tests/test_stralloc)
 	endif()
 endif()
