--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ if(BUILD_TESTING)
 		add_subdirectory(tests/test_efuns)
 		add_subdirectory(tests/test_logger)
 		add_subdirectory(tests/test_lpc_compiler)
+		add_subdirectory(tests/test_lpc_interpreter)
 		add_subdirectory(tests/test_lpc_lexer)
 		add_subdirectory(tests/test_simul_efuns)
 		add_subdirectory(tests/test_stack_machine)
