test: add unit-tests for preprocessor

--- a/lib/lpc/CMakeLists.txt
+++ b/lib/lpc/CMakeLists.txt
@@ -1,7 +1,7 @@
 # lib/lpc/CMakeLists.txt
 
 BISON_TARGET(grammar grammar.y ${CMAKE_CURRENT_BINARY_DIR}/grammar.c
-    COMPILE_FLAGS --defines=${CMAKE_CURRENT_BINARY_DIR}/grammar.h
+    DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/grammar.h
 )
 
 set(lpc_SOURCES
