clean: removed old debug() macro

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ check_include_file(fcntl.h HAVE_FCNTL_H)
 check_include_file(inttypes.h HAVE_INTTYPES_H)
 check_include_file(limits.h HAVE_LIMITS_H)
 check_include_file(signal.h HAVE_SIGNAL_H)
+check_include_file(stdarg.h HAVE_STDARG_H)
 check_include_file(stdint.h HAVE_STDINT_H)
 check_include_file(sys/param.h HAVE_SYS_PARAM_H)
 check_include_file(sys/time.h HAVE_SYS_TIME_H)
