--- a/config.h.in
+++ b/config.h.in
@@ -10,6 +10,7 @@
 #cmakedefine HAVE_SYS_TIME_H
 #cmakedefine HAVE_SYS_TYPES_H
 #cmakedefine HAVE_SYS_WAIT_H
+#cmakedefine HAVE_TERMIOS_H
 #cmakedefine HAVE_UNISTD_H
 #cmakedefine HAVE_ARPA_TELNET_H
 
